<resources>
    <string name="app_name">Geo</string>
    <string name="name_label">Name:</string>
    <string name="name">Name goes here ...</string>
    <string name="description_label">Description:</string>
    <string name="description">Description goes here ...</string>
    <string name="category_label">Category:</string>
    <string name="category">Category goes here ...</string>
    <string name="address_title_label">Address Title:</string>
    <string name="address_title">Address title goes here ...</string>
    <string name="address_label">Address</string>
    <string name="address">Address goes here ...</string>
    <string name="elevation_label">Elevation:</string>
    <string name="elevation">Elevation goes here ...</string>
    <string name="latitude_label">Latitude:</string>
    <string name="latitude">Latitude goes here ...</string>
    <string name="longitude">Logitude goes here ...</string>
    <string name="textintro">Details</string>
    <string name="textInto">Places</string>
    <string name="place_list_item_sample">Place</string>
    <string name="fab_add_place_description">Add a new place!!</string>
    <string name="longitude_label">Longitude</string>
    <string name="button_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="snack_bar_text">Deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="distance_intro">Distance And Initial Bearing</string>
    <string name="textView_from">From:</string>
    <string name="textView_to">To:</string>
    <string name="button_calculate">Calculate</string>
    <string name="distance_textView">Distance:</string>
    <string name="initial_bearing_textView">Initial Bearing:</string>
</resources>